--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root{
+body, html{
+  height: 100%;
+  margin: 0;
+}
+
+#root-of-root{
+  padding: 30px;
   background: url('watercolor.png');
-  background-attachment: fixed;
-  height: 100vh;
-  background-repeat: repeat-x repeat-y;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  /* width: max-content; */
+  background-position: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 #formhere{
@@ -36,4 +41,16 @@ code {
 
 #top{
   width: 1200px;
+}
+
+@media  screen  and (max-width: 600px){
+  #root-of-root{
+    padding: 10px;
+    background: url('watercolor.png');
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    overflow-y: scroll;
+  }
 }
